--- a/tomcat8.yml
+++ b/tomcat8.yml
@@ -2,6 +2,9 @@
 - hosts: localhost
   sudo: yes
   tasks:
+  - name: add repo
+    apt_repository:
+      repo: ppa:openjdk-r/ppa
   - name: install openjdk-8-jdk
     become: yes
     apt: 
@@ -22,3 +25,7 @@
     shell: /home/ubuntu/tomcat/apache-tomcat-8.5.40/bin/startup.sh
   - name: copy gameoflife.war
     shell: cp /home/ubuntu/ansible_terraform_deployment/gameoflife.war /home/ubuntu/tomcat/apache-tomcat-8.5.40/webapps/
+  - name: restart tomcat
+    service:
+     state: restarted
+     name: tomcat
